@@ -1,0 +1,8 @@
+.* \.test0[ 	]+PROGBITS[ 	]+([[:xdigit:]]+[ 	]+){4}[ 	]+[[:digit:]]+.*
+.* \.test1[ 	]+PROGBITS[ 	]+([[:xdigit:]]+[ 	]+){4}[ 	]+[[:digit:]]+.*
+.* \.rela?\.test1[ 	]+RELA?[ 	]+.*
+.* \.test2[ 	]+PROGBITS[ 	]+([[:xdigit:]]+[ 	]+){4}[ 	]+[[:digit:]]+.*
+.* \.rela?\.test2[ 	]+RELA?[ 	]+.*
+.* \.test3[ 	]+PROGBITS[ 	]+([[:xdigit:]]+[ 	]+){4}WA[ 	]+[[:digit:]]+.*
+.* \.rela?\.test3[ 	]+RELA?[ 	]+.*
+.* \.test4[ 	]+NOBITS[ 	]+([[:xdigit:]]+[ 	]+){4}WA[ 	]+[[:digit:]]+.*
