@@ -1,0 +1,37 @@
+.*: Assembler messages:
+.*:7: Warning: .*
+.*:7: Warning: .*
+.*:10: Warning: .*
+.*:13: Warning: .*
+.*:16: Warning: .*
+.*:18: Warning: .*
+.*:20: Warning: .*
+.*:22: Warning: .*
+.*:24: Warning: .*
+.*GAS.*
+
+
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test0[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test1,[ 	]*"",[ 	]*@progbits[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test2[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test3,[ 	]*"aw"[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test4,[ 	]*"aw",[ 	]*@nobits[ 	]*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test1,[ 	]*"aw",[ 	]*@nobits[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test2,[ 	]*"w"[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test3,[ 	]*"aw",[ 	]*@progbits[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.test4,[ 	]*"aw"[ 	]*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.data,[ 	]*"a"[ 	]*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.bss,[ 	]*"a"[ 	]*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.data,[ 	]*"aw",[ 	]*@nobits[ 	]*
+[ 	]+[[:digit:]]+[ 	]*
+[ 	]+[[:digit:]]+[ 	]+.section[ 	]+.bss,[ 	]*"aw",[ 	]*@progbits[ 	]*
